Fix horizontal scroll

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -19,6 +19,7 @@ body {
 
 main {
   flex-grow: 1;
+  overflow-x: hidden;
 }
 
 h1,
