--- a/styles/main.css
+++ b/styles/main.css
@@ -360,6 +360,7 @@ body {
 
 main {
   flex-grow: 1;
+  overflow-x: hidden;
 }
 
 h1,
